--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
         </div>
       </div>
     </div>
-    <div class="container fixed-bottom">
-      <div class="row my-2 bg-white pb-4" id="player-status">
+    <div class="container fixed-bottom bg-white">
+      <div class="row" id="player-status">
 
       </div>
       <div class="progress">
         <div class="progress-bar bg-success" id="player-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
-          0%
+          🎵 🎵 🎵
         </div>
       </div>
     </div>
